[package]
name = "cluster"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
dashmap = "6.1.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4.40"
thiserror = "2.0.12"



axum = { version = "0.8.1", features = ["tokio"] }
adb_client = { version = "2.1.7" }
image = "0.25.5"

